dataset1235/2025-2/2947369575/users/3556712823/executions/1003782500_2383239197.log
== RUN (2025-08-27 23:53:43)
-- CODE: 
import math
distA = float(input("Qual a distância entre o observador e a primeira árvore?"))
distB = float(input("Qual a distância entre o observador e a segunda árvore?"))
angulo = float (input("Qual o angulo em graus Y entre a e b? "))

cos = math.cos(radians(angulo))

c= math.sqrt((distA**2)+(distB**2) - 2*distA*distB*cos)
 print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 9
    print(round(c, 2))
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 9
    print(round(c, 2))
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 9
    print(round(c, 2))
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 9
    print(round(c, 2))
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 9
    print(round(c, 2))
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 9
    print(round(c, 2))
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:55:04)
-- CODE: 
import math
distA = float(input("Qual a distância entre o observador e a primeira árvore?"))
distB = float(input("Qual a distância entre o observador e a segunda árvore?"))
angulo = float (input("Qual o angulo em graus Y entre a e b? "))

cos = math.cos(math.radians(angulo))

c= math.sqrt((distA**2)+(distB**2) - 2*distA*distB*cos)
print(round(c, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Qual a distância entre o observador e a primeira árvore?Qual a distância entre o observador e a segunda árvore?Qual o angulo em graus Y entre a e b? 87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Qual a distância entre o observador e a primeira árvore?Qual a distância entre o observador e a segunda árvore?Qual o angulo em graus Y entre a e b? 16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Qual a distância entre o observador e a primeira árvore?Qual a distância entre o observador e a segunda árvore?Qual o angulo em graus Y entre a e b? 17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Qual a distância entre o observador e a primeira árvore?Qual a distância entre o observador e a segunda árvore?Qual o angulo em graus Y entre a e b? 1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Qual a distância entre o observador e a primeira árvore?Qual a distância entre o observador e a segunda árvore?Qual o angulo em graus Y entre a e b? 54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Qual a distância entre o observador e a primeira árvore?Qual a distância entre o observador e a segunda árvore?Qual o angulo em graus Y entre a e b? 9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:54:01)
-- CODE: 
import math
distA = float(input("Qual a distância entre o observador e a primeira árvore?"))
distB = float(input("Qual a distância entre o observador e a segunda árvore?"))
angulo = float (input("Qual o angulo em graus Y entre a e b? "))

cos = math.cos(radians(angulo))

c= math.sqrt((distA**2)+(distB**2) - 2*distA*distB*cos)
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    cos = math.cos(radians(angulo))
                   ^^^^^^^
NameError: name 'radians' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    cos = math.cos(radians(angulo))
                   ^^^^^^^
NameError: name 'radians' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    cos = math.cos(radians(angulo))
                   ^^^^^^^
NameError: name 'radians' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    cos = math.cos(radians(angulo))
                   ^^^^^^^
NameError: name 'radians' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    cos = math.cos(radians(angulo))
                   ^^^^^^^
NameError: name 'radians' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    cos = math.cos(radians(angulo))
                   ^^^^^^^
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:54:26)
-- CODE: 
import math
distA = float(input("Qual a distância entre o observador e a primeira árvore?"))
distB = float(input("Qual a distância entre o observador e a segunda árvore?"))
angulo = float (input("Qual o angulo em graus Y entre a e b? "))

cos = math.cos(math.radians(angulo))

c= math.sqrt((distA**2)+(distB**2) - 2*distA*distB*cos)
print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
Qual a distância entre o observador e a primeira árvore?Qual a distância entre o observador e a segunda árvore?Qual o angulo em graus Y entre a e b? 87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
Qual a distância entre o observador e a primeira árvore?Qual a distância entre o observador e a segunda árvore?Qual o angulo em graus Y entre a e b? 16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
Qual a distância entre o observador e a primeira árvore?Qual a distância entre o observador e a segunda árvore?Qual o angulo em graus Y entre a e b? 17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
Qual a distância entre o observador e a primeira árvore?Qual a distância entre o observador e a segunda árvore?Qual o angulo em graus Y entre a e b? 1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
Qual a distância entre o observador e a primeira árvore?Qual a distância entre o observador e a segunda árvore?Qual o angulo em graus Y entre a e b? 54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
Qual a distância entre o observador e a primeira árvore?Qual a distância entre o observador e a segunda árvore?Qual o angulo em graus Y entre a e b? 9.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:53:12)
-- CODE: 
import math
distA = float(input("Qual a distância entre o observador e a primeira árvore?"))
distB = float(input("Qual a distância entre o observador e a segunda árvore?"))
angulo = float (input("Qual o angulo em graus Y entre a e b? "))

cos = math.cos(radians(angulo))

c= math.sqrt((distA**2)+(distB**2) - 2*distA*distB*cos
 print(round(c, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 8
    c= math.sqrt((distA**2)+(distB**2) - 2*distA*distB*cos
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 8
    c= math.sqrt((distA**2)+(distB**2) - 2*distA*distB*cos
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 8
    c= math.sqrt((distA**2)+(distB**2) - 2*distA*distB*cos
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 8
    c= math.sqrt((distA**2)+(distB**2) - 2*distA*distB*cos
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 8
    c= math.sqrt((distA**2)+(distB**2) - 2*distA*distB*cos
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 8
    c= math.sqrt((distA**2)+(distB**2) - 2*distA*distB*cos
                ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
